# kalshi-python-sdk

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  TODOS.md  pyproject.toml
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: gsd-code-fixer.md  gsd-debugger.md  gsd-executor.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.github/workflows/: ci.yml  claude-code-review.yml  spec-drift.yml
.gstack/deploy-reports/: 2026-04-19-pr34-deploy.md  2026-04-19-pr35-deploy.md  2026-04-19-pr36-deploy.md  2026-04-19-pr37-deploy.md  2026-04-20-pr39-deploy.md  2026-04-20-pr40-deploy.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: AUDIT-resource-params.md
kalshi/: __init__.py  _base_client.py  _contract_map.py  async_client.py  auth.py  client.py  config.py  errors.py  types.py
kalshi/models/: __init__.py  account.py  api_keys.py  common.py  communications.py  events.py  exchange.py  historical.py  incentive_programs.py  live_data.py  markets.py  milestones.py  multivariate.py  order_groups.py  orders.py  portfolio.py  search.py  series.py  structured_targets.py  subaccounts.py
kalshi/resources/: __init__.py  _base.py  account.py  (+18 more)
scripts/: audit_demo_feasibility.py  generate.py  sync_spec.py  ws_capture.py  ws_provoke_user_order.py
specs/: openapi.yaml
tests/: _contract_support.py  conftest.py  test_account.py  test_api_keys.py  test_async_client.py  test_async_markets.py  test_async_orders.py  test_auth.py  test_base_helpers.py  test_base_put.py  test_client.py  test_communications.py  test_config_ws.py  test_contract_support.py  test_contracts.py  test_events.py  test_exchange.py  test_fcm.py  test_historical.py  test_incentive_programs.py  test_live_data.py  test_markets.py  test_milestones.py  test_models.py  test_multivariate.py  test_multivariate_models.py  test_order_groups.py  test_orders.py  test_pagination.py  test_portfolio.py  test_search.py  test_series.py  test_series_models.py  test_structured_targets.py  test_subaccounts.py
(+203 files in other folders)
